lib/tau_labs_bindings_generated.dart


  late final _AudioScheduledSourceNode_hasFinishedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioScheduledSourceNode_hasFinished',
      );
  late final _AudioScheduledSourceNode_hasFinished =
      _AudioScheduledSourceNode_hasFinishedPtr.asFunction<int Function(int)>();

  int AudioScheduledSourceNode_startWhen(int nodeId) {
    return _AudioScheduledSourceNode_startWhen(nodeId);
  }

  late final _AudioScheduledSourceNode_startWhenPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Int)>>(
        'AudioScheduledSourceNode_startWhen',
      );
  late final _AudioScheduledSourceNode_startWhen =
      _AudioScheduledSourceNode_startWhenPtr.asFunction<int Function(int)>();

  void AudioScheduledSourceNode_start(int nodeId, double when) {
    return _AudioScheduledSourceNode_start(nodeId, when);
  }

  late final _AudioScheduledSourceNode_startPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Float)>>(
        'AudioScheduledSourceNode_start',
      );
  late final _AudioScheduledSourceNode_start =
      _AudioScheduledSourceNode_startPtr.asFunction<
        void Function(int, double)
      >();

  int AudioScheduledSourceNode_playbackState(int nodeId) {
    return _AudioScheduledSourceNode_playbackState(nodeId);
  }

  late final _AudioScheduledSourceNode_playbackStatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioScheduledSourceNode_playbackState',
      );
  late final _AudioScheduledSourceNode_playbackState =
      _AudioScheduledSourceNode_playbackStatePtr.asFunction<
        int Function(int)
      >();

  /// /////////////////////
  /// SampledAudioNode ///
  /// /////////////////////
  int createAudioSampleNode(ffi.Pointer<ffi.Void> context) {
    return _createAudioSampleNode(context);
  }

  late final _createAudioSampleNodePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
        'createAudioSampleNode',
      );
  late final _createAudioSampleNode =
      _createAudioSampleNodePtr
          .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  /// setting the bus is an asynchronous operation. getBus returns the most
  /// recent set request in order that the interface work in a predictable way.
  /// In the future, setBus and getBus could be deprecated in favor of another
  /// schedule method that takes a source bus as an argument.
  void SampledAudioNode_setBus(
    int nodeId,
    ffi.Pointer<ffi.Void> context,
    int busIndex,
  ) {
    return _SampledAudioNode_setBus(nodeId, context, busIndex);
  }

  late final _SampledAudioNode_setBusPtr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Pointer<ffi.Void>, ffi.Int)
    >
  >('SampledAudioNode_setBus');
  late final _SampledAudioNode_setBus =
      _SampledAudioNode_setBusPtr.asFunction<
        void Function(int, ffi.Pointer<ffi.Void>, int)
      >();

  /// loopCount of -1 will loop forever
  /// all the schedule routines will call start(0) if necessary, so that a
  /// schedule is sufficient for this node to start producing a signal.
  void SampledAudioNode_schedule(int nodeId, double when) {
    return _SampledAudioNode_schedule(nodeId, when);
  }

  late final _SampledAudioNode_schedulePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Double)>>(
        'SampledAudioNode_schedule',
      );
  late final _SampledAudioNode_schedule =
      _SampledAudioNode_schedulePtr.asFunction<void Function(int, double)>();

  void SampledAudioNode_schedule2(int nodeId, double when, int loopCount) {
    return _SampledAudioNode_schedule2(nodeId, when, loopCount);
  }

  late final _SampledAudioNode_schedule2Ptr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Double, ffi.Int)>
  >('SampledAudioNode_schedule2');
  late final _SampledAudioNode_schedule2 =
      _SampledAudioNode_schedule2Ptr.asFunction<
        void Function(int, double, int)
      >();

  void SampledAudioNode_schedule3(
    int nodeId,
    double when,
    double grainOffset,
    int loopCount,
  ) {
    return _SampledAudioNode_schedule3(nodeId, when, grainOffset, loopCount);
  }

  late final _SampledAudioNode_schedule3Ptr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Double, ffi.Double, ffi.Int)
    >
  >('SampledAudioNode_schedule3');
  late final _SampledAudioNode_schedule3 =
      _SampledAudioNode_schedule3Ptr.asFunction<
        void Function(int, double, double, int)
      >();

  void SampledAudioNode_schedule4(
    int nodeId,
    double when,
    double grainOffset,
    double grainDuration,
    int loopCount,
  ) {
    return _SampledAudioNode_schedule4(
      nodeId,
      when,
      grainOffset,
      grainDuration,
      loopCount,
    );
  }

  late final _SampledAudioNode_schedule4Ptr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Double, ffi.Double, ffi.Double, ffi.Int)
    >
  >('SampledAudioNode_schedule4');
  late final _SampledAudioNode_schedule4 =
      _SampledAudioNode_schedule4Ptr.asFunction<
        void Function(int, double, double, double, int)
      >();

  /// this will clear anything playing or pending, without stopping the node itself.
  void SampledAudioNode_clearSchedules(int nodeId) {
    return _SampledAudioNode_clearSchedules(nodeId);
  }

  late final _SampledAudioNode_clearSchedulesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'SampledAudioNode_clearSchedules',
      );
  late final _SampledAudioNode_clearSchedules =
      _SampledAudioNode_clearSchedulesPtr.asFunction<void Function(int)>();

  /// note: start is not virtual. start on the ScheduledAudioNode is relative,
  /// but start here is in absolute time.
  void SampledAudioNode_start(int nodeId, double when) {
    return _SampledAudioNode_start(nodeId, when);
  }

  late final _SampledAudioNode_startPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Double)>>(
        'SampledAudioNode_start',
      );
  late final _SampledAudioNode_start =
      _SampledAudioNode_startPtr.asFunction<void Function(int, double)>();

  void SampledAudioNode_start2(int nodeId, double when, int loopCount) {
    return _SampledAudioNode_start2(nodeId, when, loopCount);
  }

  late final _SampledAudioNode_start2Ptr = _lookup<
    ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Double, ffi.Int)>
  >('SampledAudioNode_start2');
  late final _SampledAudioNode_start2 =
      _SampledAudioNode_start2Ptr.asFunction<void Function(int, double, int)>();

  void SampledAudioNode_start3(
    int nodeId,
    double when,
    double grainOffset,
    int loopCount,
  ) {
    return _SampledAudioNode_start3(nodeId, when, grainOffset, loopCount);
  }

  late final _SampledAudioNode_start3Ptr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Double, ffi.Double, ffi.Int)
    >
  >('SampledAudioNode_start3');
  late final _SampledAudioNode_start3 =
      _SampledAudioNode_start3Ptr.asFunction<
        void Function(int, double, double, int)
      >();

  void SampledAudioNode_start4(
    int nodeId,
    double when,
    double grainOffset,
    double grainDuration,
    int loopCount,
  ) {
    return _SampledAudioNode_start4(
      nodeId,
      when,
      grainOffset,
      grainDuration,
      loopCount,
    );
  }

  late final _SampledAudioNode_start4Ptr = _lookup<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Int, ffi.Double, ffi.Double, ffi.Double, ffi.Int)
    >
  >('SampledAudioNode_start4');
  late final _SampledAudioNode_start4 =
      _SampledAudioNode_start4Ptr.asFunction<
        void Function(int, double, double, double, int)
      >();

  /// returns the greatest sample index played back by any of the scheduled
  /// instances in the most recent render quantum. A value less than zero
  /// indicates nothing's playing.
  int SampledAudioNode_getCursor(int index) {
    return _SampledAudioNode_getCursor(index);
  }

  late final _SampledAudioNode_getCursorPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'SampledAudioNode_getCursor',
      );
  late final _SampledAudioNode_getCursor =
      _SampledAudioNode_getCursorPtr.asFunction<int Function(int)>();

  int SampledAudioNode_playbackRate(int index) {
    return _SampledAudioNode_playbackRate(index);
  }

  late final _SampledAudioNode_playbackRatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'SampledAudioNode_playbackRate',
      );
  late final _SampledAudioNode_playbackRate =
      _SampledAudioNode_playbackRatePtr.asFunction<int Function(int)>();

  int SampledAudioNode_detune(int index) {
    return _SampledAudioNode_detune(index);
  }

  late final _SampledAudioNode_detunePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'SampledAudioNode_detune',
      );
  late final _SampledAudioNode_detune =
      _SampledAudioNode_detunePtr.asFunction<int Function(int)>();

  /// /////////////
  /// AudioBus ///
  /// /////////////
  int makeBusFromFile(
    ffi.Pointer<ffi.Char> file,
    int mixToMono,
    double targetSampleRate,
  ) {
    return _makeBusFromFile(file, mixToMono, targetSampleRate);
  }

  late final _makeBusFromFilePtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Float)
    >
  >('makeBusFromFile');
  late final _makeBusFromFile =
      _makeBusFromFilePtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>, int, double)>();

  int makeBusFromMemory(
    ffi.Pointer<ffi.Uint8> buffer,
    int bufferLen,
    ffi.Pointer<ffi.Char> extension1,
    int mixToMono,
  ) {
    return _makeBusFromMemory(buffer, bufferLen, extension1, mixToMono);
  }

  late final _makeBusFromMemoryPtr = _lookup<
    ffi.NativeFunction<
      ffi.Int Function(
        ffi.Pointer<ffi.Uint8>,
        ffi.Int,
        ffi.Pointer<ffi.Char>,
        ffi.Int,
      )
    >
  >('makeBusFromMemory');
  late final _makeBusFromMemory =
      _makeBusFromMemoryPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<ffi.Char>,
              int,
            )
          >();

  int audioBusHasCheck(int busId) {
    return _audioBusHasCheck(busId);
  }

  late final _audioBusHasCheckPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'audioBusHasCheck',
      );
  late final _audioBusHasCheck =
      _audioBusHasCheckPtr.asFunction<int Function(int)>();

  /// Channels
  int AudioBus_numberOfChannels(int busIndex) {
    return _AudioBus_numberOfChannels(busIndex);
  }

  late final _AudioBus_numberOfChannelsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
        'AudioBus_numberOfChannels',
      );
  late final _AudioBus_numberOfChannels =
      _AudioBus_numberOfChannelsPtr.asFunction<int Function(int)>();

  /// Number of sample-frames
  int AudioBus_length(int busIndex) {
    return _AudioBus_length(busIndex);
  }

  late final _AudioBus_lengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('AudioBus_length');
  late final _AudioBus_length =
      _AudioBus_lengthPtr.asFunction<int Function(int)>();

  /// Sample-rate : 0.0 if unknown or "don't care"
  double AudioBus_sampleRate(int busIndex) {
    return _AudioBus_sampleRate(busIndex);
  }

  late final _AudioBus_sampleRatePtr =
      _lookup<ffi.NativeFunction<ffi.Float Function(ffi.Int)>>(
        'AudioBus_sampleRate',
      );
  late final _AudioBus_sampleRate =
      _AudioBus_sampleRatePtr.asFunction<double Function(int)>();

  void AudioBus_setSampleRate(int busIndex, double sampleRate) {
    return _AudioBus_setSampleRate(busIndex, sampleRate);
  }
